monitoringdashboard/monitoringdashboard-helm/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   annotations:
      kubernetes.io/ingress.class: nginx
      
   name: monitordashboard-ingress
   namespace: frontend
spec:
   rules:
   -  host: monitordashboard.eastus.cloudapp.azure.com
      http:
         paths:
         - path: /monitoringdashboard
           backend:
             serviceName: monitoringdashboard
             servicePort: 80
